# SDU-Collision-Free-Demo

./: README.md
ur10e_collision_free_demo/: CMakeLists.txt  package.xml
ur10e_collision_free_demo/config/: online_planning_example.srdf  parameters.yaml
ur10e_collision_free_demo/include/ur10e_collision_free_demo/: example.h  force_constraint.h  ur10e_collision_free_demo.h
ur10e_collision_free_demo/launch/: online_planning_example.launch
ur10e_collision_free_demo/meshes/ur10e/visual/: Belt_finger_New.stl
ur10e_collision_free_demo/src/: force_constraint.cpp  ur10e_collision_free_demo.cpp  ur10e_collision_free_demo_node.cpp
ur10e_collision_free_demo/urdf/: online_planning_example.xacro  online_planning_example_backup.xacro  ur.gazebo  ur10e.xacro  ur10e_a.xacro  ur10e_b.xacro
