<?xml version="1.0"?>
<package format="2">
  <name>ur10e_collision_free_demo</name>
  <version>0.1.0</version>
  <description>This package contains collision free demo for ur10e.</description>

  <maintainer email="yik@mmmi.sdu.dk">Yitaek Kim</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>roslib</depend>
  <depend>trajopt</depend>
  <depend>trajopt_ifopt</depend>
  <depend>trajopt_sqp</depend>
  <depend>tesseract_collision</depend>
  <depend>tesseract_monitoring</depend>
  <depend>tesseract_motion_planners</depend>
  <depend>tesseract_kinematics</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_rosutils</depend>
  <depend>tesseract_common</depend>
  <depend>octomap_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libjsoncpp-dev</depend>

  <exec_depend>tesseract_rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
